frontend/grammar.output
Grammar

    0 $accept: module $end

    1 module: ε
    2       | module declaration
    3       | module error

    4 declaration: varDeclaration
    5            | statement
    6            | funcDefinition

    7 varDeclaration: type identifier ';'
    8               | type identifier declarator ';'
    9               | type identifier T_ASSIGN conditionalExpression ';'
   10               | type identifier initializerDim T_ASSIGN arrayInitializer ';'
   11               | error ';'

   12 initializerDim: T_LEFT_BRACKET T_RIGHT_BRACKET
   13               | initializerDim T_LEFT_BRACKET T_RIGHT_BRACKET

   14 declarator: T_LEFT_BRACKET expression T_RIGHT_BRACKET
   15           | declarator T_LEFT_BRACKET expression T_RIGHT_BRACKET

   16 arrayInitializer: T_LEFT_BRACE initializerList T_RIGHT_BRACE

   17 initializerList: ε
   18                | initializerValue
   19                | initializerList T_COMMA initializerValue

   20 initializerValue: primary
   21                 | arrayInitializer

   22 type: T_INT_TYPE
   23     | T_CHAR_TYPE
   24     | T_BOOL_TYPE
   25     | T_VOID_TYPE
   26     | T_STRING_TYPE

   27 funcDefinition: T_FUNC function

   28 function: identifier T_LEFT_PAREN parameters T_RIGHT_PAREN returnType block

   29 returnType: ε
   30           | T_ARROW type

   31 parameters: ε
   32           | type identifier
   33           | type initializerDim identifier
   34           | parameters T_COMMA type identifier

   35 args: ε
   36     | assignExpression
   37     | args T_COMMA assignExpression

   38 statement: ifStatement
   39          | loopStatement
   40          | returnStatement
   41          | printStatement
   42          | expressionStatement

   43 ifStatement: T_IF T_LEFT_PAREN expression T_RIGHT_PAREN block else

   44 loopStatement: whileLoop

   45 whileLoop: T_WHILE T_LEFT_PAREN assignExpression T_RIGHT_PAREN block

   46 else: ε
   47     | T_ELSE block

   48 returnStatement: T_RETURN expression ';'
   49                | T_RETURN ';'

   50 printStatement: T_PRINT T_LEFT_PAREN expression T_RIGHT_PAREN ';'

   51 block: T_LEFT_BRACE blockBody T_RIGHT_BRACE

   52 blockBody: ε
   53          | blockBody declaration
   54          | blockBody error

   55 expressionStatement: expression ';'

   56 expression: assignExpression

   57 assignExpression: conditionalExpression
   58                 | identifier T_ASSIGN expression
   59                 | identifier declarator T_ASSIGN expression

   60 conditionalExpression: logicalAND

   61 logicalAND: logicalOR
   62           | logicalAND T_AND logicalOR

   63 logicalOR: relationalExpression
   64          | logicalOR T_OR relationalExpression

   65 relationalExpression: arithmeticExpression
   66                     | relationalExpression T_EQUALS arithmeticExpression
   67                     | relationalExpression T_NEQUALS arithmeticExpression
   68                     | relationalExpression '<' arithmeticExpression
   69                     | relationalExpression '>' arithmeticExpression
   70                     | relationalExpression T_LESS_EQ arithmeticExpression
   71                     | relationalExpression T_GREATER_EQ arithmeticExpression

   72 arithmeticExpression: multiplicativeExpression
   73                     | arithmeticExpression '+' multiplicativeExpression
   74                     | arithmeticExpression '-' multiplicativeExpression

   75 multiplicativeExpression: castExpression
   76                         | multiplicativeExpression '*' castExpression
   77                         | multiplicativeExpression '/' castExpression

   78 castExpression: unaryExpression

   79 unaryExpression: postfixExpression
   80                | '-' postfixExpression
   81                | '!' postfixExpression

   82 postfixExpression: primary
   83                  | postfixExpression T_LEFT_PAREN args T_RIGHT_PAREN
   84                  | postfixExpression T_LEFT_PAREN error T_RIGHT_PAREN
   85                  | identifier declarator

   86 identifier: T_IDENTIFIER

   87 primary: T_INT
   88        | T_CHAR
   89        | T_BOOL
   90        | T_STRING
   91        | T_LEFT_PAREN expression T_RIGHT_PAREN
   92        | T_LEFT_PAREN error T_RIGHT_PAREN
   93        | identifier


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 81
    '*' (42) 76
    '+' (43) 73
    '-' (45) 74 80
    '/' (47) 77
    ';' (59) 7 8 9 10 11 48 49 50 55
    '<' (60) 68
    '>' (62) 69
    error (256) 3 11 54 84 92
    T_RIGHT_BRACE (258) 16 51
    T_LEFT_BRACE (259) 16 51
    T_RIGHT_PAREN (260) 28 43 45 50 83 84 91 92
    T_LEFT_PAREN (261) 28 43 45 50 83 84 91 92
    T_RIGHT_BRACKET (262) 12 13 14 15
    T_LEFT_BRACKET (263) 12 13 14 15
    T_COMMA (264) 19 34 37
    T_ASSIGN (265) 9 10 58 59
    T_LESS_EQ (266) 70
    T_GREATER_EQ (267) 71
    T_EQUALS (268) 66
    T_NEQUALS (269) 67
    T_ARROW (270) 30
    T_OR (271) 64
    T_AND (272) 62
    T_IF (273) 43
    T_ELSE (274) 47
    T_WHILE (275) 45
    T_RETURN (276) 48 49
    T_FUNC (277) 27
    T_PRINT (278) 50
    T_INT <ival> (279) 87
    T_BOOL <ival> (280) 89
    T_CHAR <cval> (281) 88
    T_STRING <string> (282) 90
    T_INT_TYPE (283) 22
    T_BOOL_TYPE (284) 24
    T_CHAR_TYPE (285) 23
    T_VOID_TYPE (286) 25
    T_STRING_TYPE (287) 26
    T_IDENTIFIER <string> (288) 86


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    module <nval> (43)
        on left: 1 2 3
        on right: 0 2 3
    declaration <nval> (44)
        on left: 4 5 6
        on right: 2 53
    varDeclaration <nval> (45)
        on left: 7 8 9 10 11
        on right: 4
    initializerDim <llval> (46)
        on left: 12 13
        on right: 10 13 33
    declarator <llval> (47)
        on left: 14 15
        on right: 8 15 59 85
    arrayInitializer <llval> (48)
        on left: 16
        on right: 10 21
    initializerList <llval> (49)
        on left: 17 18 19
        on right: 16 19
    initializerValue <llval> (50)
        on left: 20 21
        on right: 18 19
    type <ival> (51)
        on left: 22 23 24 25 26
        on right: 7 8 9 10 30 32 33 34
    funcDefinition <nval> (52)
        on left: 27
        on right: 6
    function <nval> (53)
        on left: 28
        on right: 27
    returnType <ival> (54)
        on left: 29 30
        on right: 28
    parameters <llval> (55)
        on left: 31 32 33 34
        on right: 28 34
    args <llval> (56)
        on left: 35 36 37
        on right: 37 83
    statement <nval> (57)
        on left: 38 39 40 41 42
        on right: 5
    ifStatement <nval> (58)
        on left: 43
        on right: 38
    loopStatement <nval> (59)
        on left: 44
        on right: 39
    whileLoop <nval> (60)
        on left: 45
        on right: 44
    else <nval> (61)
        on left: 46 47
        on right: 43
    returnStatement <nval> (62)
        on left: 48 49
        on right: 40
    printStatement <nval> (63)
        on left: 50
        on right: 41
    block <nval> (64)
        on left: 51
        on right: 28 43 45 47
    blockBody <llval> (65)
        on left: 52 53 54
        on right: 51 53 54
    expressionStatement <nval> (66)
        on left: 55
        on right: 42
    expression <nval> (67)
        on left: 56
        on right: 14 15 43 48 50 55 58 59 91
    assignExpression <nval> (68)
        on left: 57 58 59
        on right: 36 37 45 56
    conditionalExpression <nval> (69)
        on left: 60
        on right: 9 57
    logicalAND <nval> (70)
        on left: 61 62
        on right: 60 62
    logicalOR <nval> (71)
        on left: 63 64
        on right: 61 62 64
    relationalExpression <nval> (72)
        on left: 65 66 67 68 69 70 71
        on right: 63 64 66 67 68 69 70 71
    arithmeticExpression <nval> (73)
        on left: 72 73 74
        on right: 65 66 67 68 69 70 71 73 74
    multiplicativeExpression <nval> (74)
        on left: 75 76 77
        on right: 72 73 74 76 77
    castExpression <nval> (75)
        on left: 78
        on right: 75 76 77
    unaryExpression <nval> (76)
        on left: 79 80 81
        on right: 78
    postfixExpression <nval> (77)
        on left: 82 83 84 85
        on right: 79 80 81 83 84
    identifier <nval> (78)
        on left: 86
        on right: 7 8 9 10 28 32 33 34 58 59 85 93
    primary <nval> (79)
        on left: 87 88 89 90 91 92 93
        on right: 20 82


State 0

    0 $accept: • module $end

    $default  reduce using rule 1 (module)

    module  go to state 1


State 1

    0 $accept: module • $end
    2 module: module • declaration
    3       | module • error

    $end           shift, and go to state 2
    error          shift, and go to state 3
    T_LEFT_PAREN   shift, and go to state 4
    '-'            shift, and go to state 5
    '!'            shift, and go to state 6
    T_IF           shift, and go to state 7
    T_WHILE        shift, and go to state 8
    T_RETURN       shift, and go to state 9
    T_FUNC         shift, and go to state 10
    T_PRINT        shift, and go to state 11
    T_INT          shift, and go to state 12
    T_BOOL         shift, and go to state 13
    T_CHAR         shift, and go to state 14
    T_STRING       shift, and go to state 15
    T_INT_TYPE     shift, and go to state 16
    T_BOOL_TYPE    shift, and go to state 17
    T_CHAR_TYPE    shift, and go to state 18
    T_VOID_TYPE    shift, and go to state 19
    T_STRING_TYPE  shift, and go to state 20
    T_IDENTIFIER   shift, and go to state 21

    declaration               go to state 22
    varDeclaration            go to state 23
    type                      go to state 24
    funcDefinition            go to state 25
    statement                 go to state 26
    ifStatement               go to state 27
    loopStatement             go to state 28
    whileLoop                 go to state 29
    returnStatement           go to state 30
    printStatement            go to state 31
    expressionStatement       go to state 32
    expression                go to state 33
    assignExpression          go to state 34
    conditionalExpression     go to state 35
    logicalAND                go to state 36
    logicalOR                 go to state 37
    relationalExpression      go to state 38
    arithmeticExpression      go to state 39
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 44
    primary                   go to state 45


State 2

    0 $accept: module $end •

    $default  accept


State 3

    3 module: module error •
   11 varDeclaration: error • ';'

    ';'  shift, and go to state 46

    $default  reduce using rule 3 (module)


State 4

   91 primary: T_LEFT_PAREN • expression T_RIGHT_PAREN
   92        | T_LEFT_PAREN • error T_RIGHT_PAREN

    error         shift, and go to state 47
    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    expression                go to state 48
    assignExpression          go to state 34
    conditionalExpression     go to state 35
    logicalAND                go to state 36
    logicalOR                 go to state 37
    relationalExpression      go to state 38
    arithmeticExpression      go to state 39
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 44
    primary                   go to state 45


State 5

   80 unaryExpression: '-' • postfixExpression

    T_LEFT_PAREN  shift, and go to state 4
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    postfixExpression  go to state 49
    identifier         go to state 50
    primary            go to state 45


State 6

   81 unaryExpression: '!' • postfixExpression

    T_LEFT_PAREN  shift, and go to state 4
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    postfixExpression  go to state 51
    identifier         go to state 50
    primary            go to state 45


State 7

   43 ifStatement: T_IF • T_LEFT_PAREN expression T_RIGHT_PAREN block else

    T_LEFT_PAREN  shift, and go to state 52


State 8

   45 whileLoop: T_WHILE • T_LEFT_PAREN assignExpression T_RIGHT_PAREN block

    T_LEFT_PAREN  shift, and go to state 53


State 9

   48 returnStatement: T_RETURN • expression ';'
   49                | T_RETURN • ';'

    T_LEFT_PAREN  shift, and go to state 4
    ';'           shift, and go to state 54
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    expression                go to state 55
    assignExpression          go to state 34
    conditionalExpression     go to state 35
    logicalAND                go to state 36
    logicalOR                 go to state 37
    relationalExpression      go to state 38
    arithmeticExpression      go to state 39
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 44
    primary                   go to state 45


State 10

   27 funcDefinition: T_FUNC • function

    T_IDENTIFIER  shift, and go to state 21

    function    go to state 56
    identifier  go to state 57


State 11

   50 printStatement: T_PRINT • T_LEFT_PAREN expression T_RIGHT_PAREN ';'

    T_LEFT_PAREN  shift, and go to state 58


State 12

   87 primary: T_INT •

    $default  reduce using rule 87 (primary)


State 13

   89 primary: T_BOOL •

    $default  reduce using rule 89 (primary)


State 14

   88 primary: T_CHAR •

    $default  reduce using rule 88 (primary)


State 15

   90 primary: T_STRING •

    $default  reduce using rule 90 (primary)


State 16

   22 type: T_INT_TYPE •

    $default  reduce using rule 22 (type)


State 17

   24 type: T_BOOL_TYPE •

    $default  reduce using rule 24 (type)


State 18

   23 type: T_CHAR_TYPE •

    $default  reduce using rule 23 (type)


State 19

   25 type: T_VOID_TYPE •

    $default  reduce using rule 25 (type)


State 20

   26 type: T_STRING_TYPE •

    $default  reduce using rule 26 (type)


State 21

   86 identifier: T_IDENTIFIER •

    $default  reduce using rule 86 (identifier)


State 22

    2 module: module declaration •

    $default  reduce using rule 2 (module)


State 23

    4 declaration: varDeclaration •

    $default  reduce using rule 4 (declaration)


State 24

    7 varDeclaration: type • identifier ';'
    8               | type • identifier declarator ';'
    9               | type • identifier T_ASSIGN conditionalExpression ';'
   10               | type • identifier initializerDim T_ASSIGN arrayInitializer ';'

    T_IDENTIFIER  shift, and go to state 21

    identifier  go to state 59


State 25

    6 declaration: funcDefinition •

    $default  reduce using rule 6 (declaration)


State 26

    5 declaration: statement •

    $default  reduce using rule 5 (declaration)


State 27

   38 statement: ifStatement •

    $default  reduce using rule 38 (statement)


State 28

   39 statement: loopStatement •

    $default  reduce using rule 39 (statement)


State 29

   44 loopStatement: whileLoop •

    $default  reduce using rule 44 (loopStatement)


State 30

   40 statement: returnStatement •

    $default  reduce using rule 40 (statement)


State 31

   41 statement: printStatement •

    $default  reduce using rule 41 (statement)


State 32

   42 statement: expressionStatement •

    $default  reduce using rule 42 (statement)


State 33

   55 expressionStatement: expression • ';'

    ';'  shift, and go to state 60


State 34

   56 expression: assignExpression •

    $default  reduce using rule 56 (expression)


State 35

   57 assignExpression: conditionalExpression •

    $default  reduce using rule 57 (assignExpression)


State 36

   60 conditionalExpression: logicalAND •
   62 logicalAND: logicalAND • T_AND logicalOR

    T_AND  shift, and go to state 61

    $default  reduce using rule 60 (conditionalExpression)


State 37

   61 logicalAND: logicalOR •
   64 logicalOR: logicalOR • T_OR relationalExpression

    T_OR  shift, and go to state 62

    $default  reduce using rule 61 (logicalAND)


State 38

   63 logicalOR: relationalExpression •
   66 relationalExpression: relationalExpression • T_EQUALS arithmeticExpression
   67                     | relationalExpression • T_NEQUALS arithmeticExpression
   68                     | relationalExpression • '<' arithmeticExpression
   69                     | relationalExpression • '>' arithmeticExpression
   70                     | relationalExpression • T_LESS_EQ arithmeticExpression
   71                     | relationalExpression • T_GREATER_EQ arithmeticExpression

    '<'           shift, and go to state 63
    '>'           shift, and go to state 64
    T_LESS_EQ     shift, and go to state 65
    T_GREATER_EQ  shift, and go to state 66
    T_EQUALS      shift, and go to state 67
    T_NEQUALS     shift, and go to state 68

    $default  reduce using rule 63 (logicalOR)


State 39

   65 relationalExpression: arithmeticExpression •
   73 arithmeticExpression: arithmeticExpression • '+' multiplicativeExpression
   74                     | arithmeticExpression • '-' multiplicativeExpression

    '+'  shift, and go to state 69
    '-'  shift, and go to state 70

    $default  reduce using rule 65 (relationalExpression)


State 40

   72 arithmeticExpression: multiplicativeExpression •
   76 multiplicativeExpression: multiplicativeExpression • '*' castExpression
   77                         | multiplicativeExpression • '/' castExpression

    '*'  shift, and go to state 71
    '/'  shift, and go to state 72

    $default  reduce using rule 72 (arithmeticExpression)


State 41

   75 multiplicativeExpression: castExpression •

    $default  reduce using rule 75 (multiplicativeExpression)


State 42

   78 castExpression: unaryExpression •

    $default  reduce using rule 78 (castExpression)


State 43

   79 unaryExpression: postfixExpression •
   83 postfixExpression: postfixExpression • T_LEFT_PAREN args T_RIGHT_PAREN
   84                  | postfixExpression • T_LEFT_PAREN error T_RIGHT_PAREN

    T_LEFT_PAREN  shift, and go to state 73

    $default  reduce using rule 79 (unaryExpression)


State 44

   58 assignExpression: identifier • T_ASSIGN expression
   59                 | identifier • declarator T_ASSIGN expression
   85 postfixExpression: identifier • declarator
   93 primary: identifier •

    T_LEFT_BRACKET  shift, and go to state 74
    T_ASSIGN        shift, and go to state 75

    $default  reduce using rule 93 (primary)

    declarator  go to state 76


State 45

   82 postfixExpression: primary •

    $default  reduce using rule 82 (postfixExpression)


State 46

   11 varDeclaration: error ';' •

    $default  reduce using rule 11 (varDeclaration)


State 47

   92 primary: T_LEFT_PAREN error • T_RIGHT_PAREN

    T_RIGHT_PAREN  shift, and go to state 77


State 48

   91 primary: T_LEFT_PAREN expression • T_RIGHT_PAREN

    T_RIGHT_PAREN  shift, and go to state 78


State 49

   80 unaryExpression: '-' postfixExpression •
   83 postfixExpression: postfixExpression • T_LEFT_PAREN args T_RIGHT_PAREN
   84                  | postfixExpression • T_LEFT_PAREN error T_RIGHT_PAREN

    T_LEFT_PAREN  shift, and go to state 73

    $default  reduce using rule 80 (unaryExpression)


State 50

   85 postfixExpression: identifier • declarator
   93 primary: identifier •

    T_LEFT_BRACKET  shift, and go to state 74

    $default  reduce using rule 93 (primary)

    declarator  go to state 79


State 51

   81 unaryExpression: '!' postfixExpression •
   83 postfixExpression: postfixExpression • T_LEFT_PAREN args T_RIGHT_PAREN
   84                  | postfixExpression • T_LEFT_PAREN error T_RIGHT_PAREN

    T_LEFT_PAREN  shift, and go to state 73

    $default  reduce using rule 81 (unaryExpression)


State 52

   43 ifStatement: T_IF T_LEFT_PAREN • expression T_RIGHT_PAREN block else

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    expression                go to state 80
    assignExpression          go to state 34
    conditionalExpression     go to state 35
    logicalAND                go to state 36
    logicalOR                 go to state 37
    relationalExpression      go to state 38
    arithmeticExpression      go to state 39
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 44
    primary                   go to state 45


State 53

   45 whileLoop: T_WHILE T_LEFT_PAREN • assignExpression T_RIGHT_PAREN block

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    assignExpression          go to state 81
    conditionalExpression     go to state 35
    logicalAND                go to state 36
    logicalOR                 go to state 37
    relationalExpression      go to state 38
    arithmeticExpression      go to state 39
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 44
    primary                   go to state 45


State 54

   49 returnStatement: T_RETURN ';' •

    $default  reduce using rule 49 (returnStatement)


State 55

   48 returnStatement: T_RETURN expression • ';'

    ';'  shift, and go to state 82


State 56

   27 funcDefinition: T_FUNC function •

    $default  reduce using rule 27 (funcDefinition)


State 57

   28 function: identifier • T_LEFT_PAREN parameters T_RIGHT_PAREN returnType block

    T_LEFT_PAREN  shift, and go to state 83


State 58

   50 printStatement: T_PRINT T_LEFT_PAREN • expression T_RIGHT_PAREN ';'

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    expression                go to state 84
    assignExpression          go to state 34
    conditionalExpression     go to state 35
    logicalAND                go to state 36
    logicalOR                 go to state 37
    relationalExpression      go to state 38
    arithmeticExpression      go to state 39
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 44
    primary                   go to state 45


State 59

    7 varDeclaration: type identifier • ';'
    8               | type identifier • declarator ';'
    9               | type identifier • T_ASSIGN conditionalExpression ';'
   10               | type identifier • initializerDim T_ASSIGN arrayInitializer ';'

    T_LEFT_BRACKET  shift, and go to state 85
    T_ASSIGN        shift, and go to state 86
    ';'             shift, and go to state 87

    initializerDim  go to state 88
    declarator      go to state 89


State 60

   55 expressionStatement: expression ';' •

    $default  reduce using rule 55 (expressionStatement)


State 61

   62 logicalAND: logicalAND T_AND • logicalOR

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    logicalOR                 go to state 90
    relationalExpression      go to state 38
    arithmeticExpression      go to state 39
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 50
    primary                   go to state 45


State 62

   64 logicalOR: logicalOR T_OR • relationalExpression

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    relationalExpression      go to state 91
    arithmeticExpression      go to state 39
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 50
    primary                   go to state 45


State 63

   68 relationalExpression: relationalExpression '<' • arithmeticExpression

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    arithmeticExpression      go to state 92
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 50
    primary                   go to state 45


State 64

   69 relationalExpression: relationalExpression '>' • arithmeticExpression

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    arithmeticExpression      go to state 93
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 50
    primary                   go to state 45


State 65

   70 relationalExpression: relationalExpression T_LESS_EQ • arithmeticExpression

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    arithmeticExpression      go to state 94
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 50
    primary                   go to state 45


State 66

   71 relationalExpression: relationalExpression T_GREATER_EQ • arithmeticExpression

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    arithmeticExpression      go to state 95
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 50
    primary                   go to state 45


State 67

   66 relationalExpression: relationalExpression T_EQUALS • arithmeticExpression

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    arithmeticExpression      go to state 96
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 50
    primary                   go to state 45


State 68

   67 relationalExpression: relationalExpression T_NEQUALS • arithmeticExpression

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    arithmeticExpression      go to state 97
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 50
    primary                   go to state 45


State 69

   73 arithmeticExpression: arithmeticExpression '+' • multiplicativeExpression

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    multiplicativeExpression  go to state 98
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 50
    primary                   go to state 45


State 70

   74 arithmeticExpression: arithmeticExpression '-' • multiplicativeExpression

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    multiplicativeExpression  go to state 99
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 50
    primary                   go to state 45


State 71

   76 multiplicativeExpression: multiplicativeExpression '*' • castExpression

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    castExpression     go to state 100
    unaryExpression    go to state 42
    postfixExpression  go to state 43
    identifier         go to state 50
    primary            go to state 45


State 72

   77 multiplicativeExpression: multiplicativeExpression '/' • castExpression

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    castExpression     go to state 101
    unaryExpression    go to state 42
    postfixExpression  go to state 43
    identifier         go to state 50
    primary            go to state 45


State 73

   83 postfixExpression: postfixExpression T_LEFT_PAREN • args T_RIGHT_PAREN
   84                  | postfixExpression T_LEFT_PAREN • error T_RIGHT_PAREN

    error         shift, and go to state 102
    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    T_RIGHT_PAREN  reduce using rule 35 (args)
    T_COMMA        reduce using rule 35 (args)

    args                      go to state 103
    assignExpression          go to state 104
    conditionalExpression     go to state 35
    logicalAND                go to state 36
    logicalOR                 go to state 37
    relationalExpression      go to state 38
    arithmeticExpression      go to state 39
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 44
    primary                   go to state 45


State 74

   14 declarator: T_LEFT_BRACKET • expression T_RIGHT_BRACKET

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21

    expression                go to state 105
    assignExpression          go to state 34
    conditionalExpression     go to state 35
    logicalAND                go to state 36
    logicalOR                 go to state 37
    relationalExpression      go to state 38
    arithmeticExpression      go to state 39
    multiplicativeExpression  go to state 40
    castExpression            go to state 41
    unaryExpression           go to state 42
    postfixExpression         go to state 43
    identifier                go to state 44
    primary                   go to state 45


State 75

   58 assignExpression: identifier T_ASSIGN • expression

    T_LEFT_PAREN  shift, and go to state 4
    '-'           shift, and go to state 5
    '!'           shift, and go to state 6
    T_INT         shift, and go to state 12
    T_BOOL        shift, and go to state 13
    T_CHAR        shift, and go to state 14
    T_STRING      shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 21
